cdap-ui/app/features/adapters/adapters.less
@import "../../styles/variables.less";
@import "../../../bower_components/bootstrap/less/mixins.less";
@import "../../styles/themes/cdap/mixins.less";
body.theme-cdap {
  &.state-adapters-list {
    [class*="col-"] {
      padding-left: 5px;
      padding-right: 5px;
    }
  }
  &.state-adapters {

    .adapter-name {
      position: absolute;
      left: 167px;
      z-index: 1029;
      > div {
        background-color: white;
        cursor: pointer;
        margin-top: 20px;
        max-width: 450px;
        padding: 10px 15px;
        .box-shadow(0px 6px 17px -6px rgba(0,0,0,0.75));
      }
      h1 {
        font-size: 20px;
        margin-top: 0;
      }
      a, p {
        color: @cdap-header;
      }
      a {
        text-decoration: none;
        &.fa-pencil {
          margin-left: 10px;
        }
      }
      // TODO: Description still needs to be added
      p {
        clear: both;
      }
    }
    fieldset.view-plugin-json {
      textarea {
        resize: none;
        height: 60vh;
      }
    }
  }

  .name-error {
    background-color: @brand-danger;
  }

}

